--- a/dokucms/layout.css
+++ b/dokucms/layout.css
@@ -13,20 +13,17 @@ div.dokuwiki .stylehead {
 }
 
 div.dokuwiki .header {
-  height: 6.5em;
+  height: 6.4em;
   background: __background_alt__ url(images/__imgblend__) repeat-y 0 0;
 }
 
 div.dokuwiki .pagename {
-  height: 1.6em;
-  float: left;
-  font-size: 250%;
-  font-weight: bolder;
-  color: __background_alt__;
-  text-align: left;
-  vertical-align: middle;
-  padding: 1em 0 0 7.65em;
-  background: transparent url(images/__yourlogo__) no-repeat bottom left;
+   font-size: 250%;
+   font-weight: bolder;
+   color: __background_alt__;
+   text-align: left;
+   padding: 1em 0 1.05em 7.65em;
+   background: transparent url(images/__yourlogo__) no-repeat 0 0;
 }
 
 div.dokuwiki .pagename a {
